# encodr

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  encodr  encodr_cli.py  install.sh  pytest.ini
.github/workflows/: ci.yml  release.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: analytics.py  auth.py  config.py  files.py  health.py  jobs.py  review.py  routes.py  system.py  worker.py
apps/api/app/core/: __init__.py  auth.py  config.py  dependencies.py  security.py  worker_auth.py
apps/api/app/models/: __init__.py
apps/api/app/schemas/: __init__.py  analytics.py  auth.py  config.py  files.py  jobs.py  plans.py  review.py  schedules.py  system.py  user.py  worker.py
apps/api/app/services/: __init__.py  analytics.py  audit.py  auth.py  errors.py  files.py  jobs.py  library.py  orchestration.py  plans.py  review.py  setup.py  system.py  worker.py
apps/ui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
apps/worker/: README.md  pyproject.toml
apps/worker-agent/: README.md  pyproject.toml
apps/worker-agent/app/: __init__.py  capabilities.py  client.py  config.py  execution.py  main.py  service.py  version.py
apps/worker/app/: __init__.py  main.py
apps/worker/app/executor/: __init__.py  loop.py  service.py
apps/worker/app/planner/: __init__.py  service.py
apps/worker/app/probe/: __init__.py  service.py
apps/worker/app/verification/: __init__.py
config/: app.example.yaml  app.yaml  policy.example.yaml  workers.example.yaml  workers.yaml
config/profiles/: animation.example.yaml  default.example.yaml  movies-default.example.yaml  remux-4k.example.yaml  standard-hevc.example.yaml  tv-default.example.yaml
docs/: ANALYTICS_PLAN.md  API_PLAN.md  ARCHITECTURE.md  DATA_MODEL.md  DECISIONS.md  DEPLOYMENT.md  INSTALL.md  KNOWN_LIMITATIONS.md  MEDIA_POLICY.md  MILESTONES.md  PROJECT_MAP.md  PROJECT_OVERVIEW.md  RELEASE_CHECKLIST.md  RENAMING_RULES.md  SECURITY.md  SPEC.md  STORAGE_SETUP.md  UI_PLAN.md  UPDATES.md  WINDOWS_WORKER_SETUP.md  WORKERS.md  WORKER_PLAN.md  local-ui-demo-seed.md
infra/compose/: local.override.yml
infra/docker/: api.Dockerfile  ui.Dockerfile  worker-agent.Dockerfile  (+1 more)
tests/: README.md  conftest.py
(+96 files in other folders)
