[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "encodr-api"
version = "0.1.0"
description = "FastAPI application for encodr"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

