[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "encodr-api"
dynamic = ["version"]
description = "FastAPI application for encodr"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "PyJWT>=2.8,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  "argon2-cffi>=23.1,<24.0",
  "uvicorn[standard]>=0.30,<1.0",
  "encodr-core",
  "encodr-db",
  "encodr-shared",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.version]
path = "../../VERSION"
pattern = "^(?P<version>.+)$"
