[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "encodr-worker-agent"
dynamic = ["version"]
description = "Remote worker registration and heartbeat agent for encodr"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.version]
path = "../../VERSION"
pattern = "^(?P<version>.+)$"
