[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "encodr-worker"
version = "0.1.2"
description = "Worker application for encodr"
requires-python = ">=3.12"
dependencies = [
  "SQLAlchemy>=2.0,<3.0",
  "encodr-core",
  "encodr-db",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
